# CMDCore

./: CMakeLists.txt  autotimer  autotimer.cpp  clc  clc.pc.in  cmdcore  cmdcore.cpp  cmdcore.pc.in  logger  logger.cpp  logger.pc.in  makefile  optparser  optparser.cpp  test.cpp  timer  timer.cpp
CMDCore/: cmdcore  logger
test/: CMakeLists.txt  test_logger.cpp  test_optparser.cpp  test_tok.cpp
